<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    tools:context=".producto_registro_fragment">

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="729dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00442455"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/agregararchivo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRMnombre"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/estilo_text"
                        android:gravity="center"
                        android:text="Artículo:"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtNombreArticulo"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:background="@drawable/txt_ingreso_pedido"
                        android:ems="10"
                        android:hint="@string/nombreArticulo"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#80000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRMnombre4"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/estilo_text"
                        android:gravity="center"
                        android:text="Código:"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtCodigo"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:background="@drawable/txt_ingreso_pedido"
                        android:ems="10"
                        android:hint="@string/codigo"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#80000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRMnombre5"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/estilo_text"
                        android:gravity="center"
                        android:text="Precio:"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtPrecio"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:background="@drawable/txt_ingreso_pedido"
                        android:ems="10"
                        android:hint="@string/precio"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#80000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRMnombre10"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/estilo_text"
                        android:gravity="center"
                        android:text="Cantidad:"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtCantidad"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:background="@drawable/txt_ingreso_pedido"
                        android:ems="10"
                        android:hint="@string/cantidad"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#80000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textRMnombre11"
                        android:layout_width="130dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="6dp"
                        android:background="@drawable/estilo_text"
                        android:gravity="center"
                        android:text="Descripción:"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtDescripcion"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:background="@drawable/txt_ingreso_pedido"
                        android:ems="10"
                        android:hint="@string/descripcion"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#80000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnAgregar"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/btMRaceptar"
                        android:textColor="#070505"
                        android:textStyle="bold"
                        app:backgroundTint="#2196F3"
                        app:cornerRadius="15dp"
                        app:icon="@android:drawable/ic_input_add" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLimpiar"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/btMRlimpiar"
                        android:textColor="#050404"
                        android:textStyle="bold"
                        app:backgroundTint="#2196F3"
                        app:cornerRadius="15dp"
                        app:icon="@android:drawable/ic_input_delete" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btncancelar"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/btMRcancelar"
                    android:textColor="#0B0808"
                    android:textStyle="bold"
                    app:backgroundTint="#2196F3"
                    app:cornerRadius="15dp"
                    app:icon="@android:drawable/ic_menu_close_clear_cancel" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>